--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <li><i class="fa-solid fa-check"></i> Uso ilimitado</li>
             </ul>
 
-            <a href="SEU_LINK_KIWIFY_AQUI" class="btn-cta" style="width:100%;">
+            <a href="https://pay.kiwify.com.br/hUpuonv" target="_blank" class="btn-cta" style="width:100%;">
                 <i class="fa-solid fa-lock"></i> Comprar Agora
             </a>
         </div>
